src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Defect_Code__c</fullName>
        <description>Indicates the Standardized codes for categorising a Defect on the Physical Asset</description>
        <inlineHelpText>Indicates the Standardized codes for categorising a Defect on the Physical Asset</inlineHelpText>
        <label>Defect Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Defect_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the inquiry</description>
        <inlineHelpText>Description of the inquiry</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>The physical asset error code</description>
        <inlineHelpText>The physical asset error code</inlineHelpText>
        <label>Error Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Display_Message__c</fullName>
        <description>The error or display message on the physical asset</description>
        <inlineHelpText>The error or display message on the physical asset</inlineHelpText>
        <label>Error / Display Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <description>Indicates what has been worked on for this Case</description>
        <inlineHelpText>Indicates what has been worked on for this Case</inlineHelpText>
        <label>Fault Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fault_Location_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Fault_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fault_Location_Category__c</fullName>
        <label>Fault Location Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fault_Location_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fix_by_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if the issue can be fixed by phone</description>
        <inlineHelpText>Can this issue be Fixed by Phone?</inlineHelpText>
        <label>Fix by phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions on how to fix the issue</description>
        <inlineHelpText>How can the issue be resolved?</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product the article is regarding</description>
        <inlineHelpText>The product the article is regarding</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for FAQ</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Additional remarks</description>
        <inlineHelpText>Additional remarks</inlineHelpText>
        <label>Remarks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_resource_type__c</fullName>
        <description>The required resource type if the issue can not be fixed by phone</description>
        <inlineHelpText>The required resource type if the issue can not be fixed by phone</inlineHelpText>
        <label>Required resource type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fix_by_phone__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>The solution required to solve the issue</description>
        <inlineHelpText>The solution required to solve the issue</inlineHelpText>
        <label>Solution</label>
        <type>TextArea</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>DE_Knowledge_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>DE Knowledge Translations</value>
        </filters>
        <label>DE Knowledge Translations</label>
    </listViews>
    <listViews>
        <fullName>DK_Knowledge_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>DK Knowledge Translations</value>
        </filters>
        <label>DK Knowledge Translations</label>
    </listViews>
    <listViews>
        <fullName>ES_Knowledge_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>ES Knowledge Translations</value>
        </filters>
        <label>ES Knowledge Translations</label>
    </listViews>
    <listViews>
        <fullName>FR_Knowledge_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>FR Knowledge Translations</value>
        </filters>
        <label>FR Knowledge Translations</label>
    </listViews>
    <listViews>
        <fullName>NL_Knowledge_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>NL Knowledge Translations</value>
        </filters>
        <label>NL Knowledge Translations</label>
    </listViews>
    <listViews>
        <fullName>NO_Knowledge_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>NO Knowledge Translations</value>
        </filters>
        <label>NO Knowledge Translations</label>
    </listViews>
    <listViews>
        <fullName>SE_Knowledge_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>SE Knowledge Translations</value>
        </filters>
        <label>SE Knowledge Translations</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>false</active>
        <description>This can be used for simple question and answer articles</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic_Requests</fullName>
        <active>true</active>
        <description>For all general questions and requests.</description>
        <label>Generic Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <description>For all articles on technical information.</description>
        <label>Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Troubleshooting</fullName>
        <active>true</active>
        <description>For all articles regarding troubleshooting.</description>
        <label>Troubleshooting</label>
    </recordTypes>
</CustomObject>